{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 11,
  "lineage": "85110e97-9316-788f-2d37-67e689f4be5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058264111371:route-table/rtb-0934ca896a3d165b4",
            "id": "rtb-0934ca896a3d165b4",
            "owner_id": "058264111371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c3f9e9d2054813f2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Private-Subnet-RouteTable-0",
              "Project": "weatherbug"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Private-Subnet-RouteTable-0",
              "Project": "weatherbug"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f28a263e57fb30"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058264111371:route-table/rtb-04c421f2f699b3027",
            "id": "rtb-04c421f2f699b3027",
            "owner_id": "058264111371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00ca835266e87759d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Private-Subnet-RouteTable-1",
              "Project": "weatherbug"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Private-Subnet-RouteTable-1",
              "Project": "weatherbug"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f28a263e57fb30"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058264111371:route-table/rtb-0ce6cb9843b5e9fd5",
            "id": "rtb-0ce6cb9843b5e9fd5",
            "owner_id": "058264111371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0933e5c7babcc872f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Private-Subnet-RouteTable-2",
              "Project": "weatherbug"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Private-Subnet-RouteTable-2",
              "Project": "weatherbug"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f28a263e57fb30"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:058264111371:route-table/rtb-094e5e371dcb83471",
            "id": "rtb-094e5e371dcb83471",
            "owner_id": "058264111371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028712322eef1b85f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "Public Route Table",
              "Project": "weatherbug"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "Public Route Table",
              "Project": "weatherbug"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c0f28a263e57fb30"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035fd2ad04d72bc41",
            "route_table_id": "rtb-0934ca896a3d165b4",
            "subnet_id": "subnet-07bf6e486db1c4fc5"
          },
          "dependencies": [
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0878bc3bd1c6a4d75",
            "route_table_id": "rtb-04c421f2f699b3027",
            "subnet_id": "subnet-095134bc54cb81c98"
          },
          "dependencies": [
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b6a4367c1b51992",
            "route_table_id": "rtb-0ce6cb9843b5e9fd5",
            "subnet_id": "subnet-0e0ee2423646ac7b3"
          },
          "dependencies": [
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2cdf5382aa79b06",
            "route_table_id": "rtb-094e5e371dcb83471",
            "subnet_id": "subnet-0bf39c16eab4a0c29"
          },
          "dependencies": [
            "aws_route_table.public_route_table"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bf8c87682d27b86",
            "route_table_id": "rtb-094e5e371dcb83471",
            "subnet_id": "subnet-0f8ec2638b596a7d3"
          },
          "dependencies": [
            "aws_route_table.public_route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09615112932b6cea2",
            "route_table_id": "rtb-094e5e371dcb83471",
            "subnet_id": "subnet-0e3dd86a3ab15d103"
          },
          "dependencies": [
            "aws_route_table.public_route_table"
          ]
        }
      ]
    }
  ]
}